# whitson-sdk-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yaml  release.yaml
tests/client/: conftest.py  test_config.py  token.json
whitson/client/: __init__.py  _api_client.py  _whitson_client.py  config.py  dataclasses.py
whitson/client/api/: fields.py  production_data.py  projects.py  wells.py
