[tool.poetry]
name = "whitson-sdk-python"
version = "0.1.1"
description = "Whitson Python SDK for developers, data scientists, and engineers working with"
authors = ["Angela Dang Atkinson <Angela.DangAtkinson@ovintiv.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include="whitson", from="."}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
notebook = "^7.0.2"
pytest = "^7.4.0"
pyment = "^0.3.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
